--- a/java/build.gradle
+++ b/java/build.gradle
@@ -12,6 +12,9 @@ allprojects {
     }
 }
 
+// Defines and initializes enableCodeAnalysis to the corresponding property in gradle.properties.
+def enableCodeAnalysis = project.property('enableCodeAnalysis').toBoolean()
+
 subprojects {
     project.ext.topSrcDir = "$rootProject.projectDir/.."
 
@@ -47,7 +50,11 @@ subprojects {
     }
 
     // We want Checkstyle to generally run after Rewrite and to exclude files generated from Slice.
+    // You need to use -PenableCodeAnalysis to be able to invoke the checkstyle, rewriteRun, and rewriteDryRun tasks
+    // The tasks still need to be manually called if nothing else invokes them.
     tasks.withType(Checkstyle) {
+        task ->
+            task.enabled = enableCodeAnalysis
         dependsOn(rewriteDryRun)
         exclude(
             '**/generated/**'
@@ -144,10 +151,15 @@ dependencies {
     )
 }
 
-// Use -PdryRunFailSkip in the command line to avoid failing the project during an OpenRewrite dryRun.
-task rewriteDryRunFailable {
-    if (!project.hasProperty("dryRunFailSkip")) {
-        rewrite.failOnDryRunResults = true
-    }
-    finalizedBy rewriteDryRun
+// You need to use -PenableCodeAnalysis to be able to invoke the checkstyle, rewriteRun, and rewriteDryRun tasks.
+// The tasks still need to be manually called if nothing else invokes them.
+tasks.named('rewriteDryRun') {
+    task ->
+        task.enabled = enableCodeAnalysis
+    rewrite.failOnDryRunResults = true
+}
+
+tasks.named('rewriteRun') {
+    task ->
+        task.enabled = enableCodeAnalysis
 }
