Initial Windows build fix

--- a/cpp/src/Glacier2/msbuild/glacier2router.vcxproj
+++ b/cpp/src/Glacier2/msbuild/glacier2router.vcxproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <ClCompile Include="..\Blobject.cpp" />
     <ClCompile Include="..\ClientBlobject.cpp" />
+    <ClCompile Include="..\CryptPermissionsVerifier.cpp" />
     <ClCompile Include="..\FilterManager.cpp" />
     <ClCompile Include="..\Glacier2Router.cpp" />
     <ClCompile Include="..\Instance.cpp" />
