--- a/cpp/src/Glacier2/msbuild/glacier2router.vcxproj.filters
+++ b/cpp/src/Glacier2/msbuild/glacier2router.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="..\SessionRouterI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\CryptPermissionsVerifier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Blobject.h">
