--- a/cpp/src/IceGrid/msbuild/icegridnode/icegridnode.vcxproj
+++ b/cpp/src/IceGrid/msbuild/icegridnode/icegridnode.vcxproj
@@ -109,6 +109,7 @@
     <SliceCompile Include="..\..\Internal.ice" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Glacier2\CryptPermissionsVerifier.cpp" />
     <ClCompile Include="..\..\Activator.cpp" />
     <ClCompile Include="..\..\AdapterCache.cpp" />
     <ClCompile Include="..\..\AdminCallbackRouter.cpp" />
