--- a/cpp/src/IceGrid/msbuild/icegridnode/icegridnode.vcxproj.filters
+++ b/cpp/src/IceGrid/msbuild/icegridnode/icegridnode.vcxproj.filters
@@ -219,6 +219,9 @@
     <ClCompile Include="..\..\XMLParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Glacier2\CryptPermissionsVerifier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Win32\Debug\Lookup.h">
