Fix make install to install IceDiscovery and IceLocatorDiscovery (#3867)

--- a/cpp/msbuild/ice.nuget.targets
+++ b/cpp/msbuild/ice.nuget.targets
@@ -33,9 +33,7 @@
                  Exclude="$(IceSrcRootDir)include\IceBT\*.h;
                           $(IceSrcRootDir)include\generated\**\*.h"/>
 
-        <Headers Include="$(IceSrcRootDir)include\generated\$(Platform)\$(Configuration)\**\*.h"
-                 Exclude="$(IceSrcRootDir)include\generated\$(Platform)\$(Configuration)\IceDiscovery\*.h;
-                          $(IceSrcRootDir)include\generated\$(Platform)\$(Configuration)\IceLocatorDiscovery\*.h"/>
+        <Headers Include="$(IceSrcRootDir)include\generated\$(Platform)\$(Configuration)\**\*.h"/>
 
         <Slices Include="$(IceSrcRootDir)..\slice\**\*.ice"
                 Exclude="$(IceSrcRootDir)..\slice\IceDiscovery\*.ice;
