--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -59,7 +59,11 @@ task :generate_sources do
         "../cpp/src/Slice",
         "../cpp/include/Ice",
         "../cpp/include/Ice/SSL",
-        "../cpp/include/generated/Ice"]
+        "../cpp/include/IceDiscovery",
+        "../cpp/include/IceLocatorDiscovery",
+        "../cpp/include/generated/Ice",
+        "../cpp/include/generated/IceDiscovery",
+        "../cpp/include/generated/IceLocatorDiscovery"]
 
     for source_dir in ice_cpp_sources do
         Dir.foreach(source_dir) do |entry|
