Gutting the toggle system, adjusting Makefile and ice.proj to compensate

--- a/java/Makefile
+++ b/java/Makefile
@@ -21,7 +21,7 @@ ifneq ($(install_bindir),)
 endif
 
 all:
-	$(GRADLE) $(GRADLEARGS) build
+	$(GRADLE) $(GRADLEARGS) build -x rewriteDryRun -x checkstyle
 
 tests:
 	$(GRADLE) $(GRADLEARGS) :test:assemble
