--- a/python/modules/IcePy/msbuild/icepy.vcxproj
+++ b/python/modules/IcePy/msbuild/icepy.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="..\Connection.cpp" />
     <ClCompile Include="..\ConnectionInfo.cpp" />
     <ClCompile Include="..\Current.cpp" />
+    <ClCompile Include="..\DefaultSliceLoader.cpp" />
     <ClCompile Include="..\Executor.cpp" />
     <ClCompile Include="..\Future.cpp" />
     <ClCompile Include="..\Endpoint.cpp" />
@@ -60,6 +61,7 @@
     <ClInclude Include="..\Connection.h" />
     <ClInclude Include="..\ConnectionInfo.h" />
     <ClInclude Include="..\Current.h" />
+    <ClInclude Include="..\DefaultSliceLoader.h" />
     <ClInclude Include="..\Executor.h" />
     <ClInclude Include="..\Endpoint.h" />
     <ClInclude Include="..\EndpointInfo.h" />
@@ -155,7 +157,6 @@
       <ImportLibrary />
     </Link>
     <ClCompile>
-
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -163,7 +164,6 @@
       <ImportLibrary />
     </Link>
     <ClCompile>
-
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -171,7 +171,6 @@
       <ImportLibrary />
     </Link>
     <ClCompile>
-
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -179,7 +178,6 @@
       <ImportLibrary />
     </Link>
     <ClCompile>
-
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
