--- a/.github/workflows/build-nightly-release-workflow.yml
+++ b/.github/workflows/build-nightly-release-workflow.yml
@@ -97,14 +97,17 @@ jobs:
     secrets:
       REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
-  build-cpp-nuget-package:
+  build-cpp-windows-packages:
     name: Build C++ NuGet Package
-    uses: ./.github/workflows/build-cpp-nuget-package.yml
+    uses: ./.github/workflows/build-cpp-windows-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
-      source_url: "${{ inputs.repository_url }}/nuget-nightly/"
+      nuget_source_url: "${{ inputs.repository_url }}/nuget-nightly/"
+      repository_url: "${{ inputs.repository_url }}/nightly/"
+      repository_username: ${{ inputs.repository_username }}
     secrets:
+      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
       NUGET_API_KEY: ${{ secrets.NEXUS_NIGHTLY_NUGET_API_KEY }}
 
   build-deb-packages:
@@ -155,18 +158,6 @@ jobs:
       repository_username: ${{ inputs.repository_username }}
     secrets:
       MAVEN_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
-
-  build-msi-package:
-    name: Build MSI Package
-    uses: ./.github/workflows/build-msi-package.yml
-    needs: [set-version, build-cpp-nuget-package]
-    with:
-      ice_version: ${{ needs.set-version.outputs.semver_version }}
-      source_url: "${{ inputs.repository_url }}/nuget-nightly/"
-      repository_url: "${{ inputs.repository_url }}/nightly/"
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
   build-npm-packages:
     name: Build NPM Packages
