--- a/csharp/src/Glacier2/Glacier2.csproj
+++ b/csharp/src/Glacier2/Glacier2.csproj
@@ -8,6 +8,7 @@
     <PackageId>ZeroC.Glacier2</PackageId>
     <PackageTags>Ice</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>logo-128x128.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <SliceCompile Include="../../../slice/$(AssemblyName)/*.ice" />
@@ -28,6 +29,7 @@
     <!-- Packaging files -->
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
+    <Content Include="../../../config/logo-128x128.png" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
     <Content Include="@(SliceCompile)" Pack="true" PackagePath="/slice/Glacier2"/>
     <Content Include="ZeroC.Glacier2.props" Pack="true" PackagePath="buildTransitive/" />
