--- a/csharp/src/Ice/Ice.csproj
+++ b/csharp/src/Ice/Ice.csproj
@@ -8,6 +8,7 @@
     <PackageId>ZeroC.Ice</PackageId>
     <PackageTags>Ice</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>logo-128x128.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <SliceCompile Include="../../../slice/Ice/*.ice" />
@@ -24,6 +25,7 @@
     <!-- Packaging files -->
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
+    <Content Include="../../../config/logo-128x128.png" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
     <Content Include="@(SliceCompile)" Pack="true" PackagePath="/slice/Ice"/>
     <Content Include="ZeroC.Ice.props" Pack="true" PackagePath="buildTransitive/" />
