--- a/csharp/src/iceboxnet/iceboxnet.csproj
+++ b/csharp/src/iceboxnet/iceboxnet.csproj
@@ -10,6 +10,7 @@
     <ToolCommandName>iceboxnet</ToolCommandName>
     <PackageTags>Ice</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>logo-128x128.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../Ice/Ice.csproj" />
@@ -28,6 +29,7 @@
     <!-- Packaging files -->
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
+    <Content Include="../../../config/logo-128x128.png" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 </Project>
