Add license expression

--- a/csharp/src/Glacier2/Glacier2.csproj
+++ b/csharp/src/Glacier2/Glacier2.csproj
@@ -8,6 +8,7 @@
     <PackageId>ZeroC.Glacier2</PackageId>
     <PackageTags>Ice</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
     <PackageIcon>logo-128x128.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
