--- a/csharp/src/IceGrid/IceGrid.csproj
+++ b/csharp/src/IceGrid/IceGrid.csproj
@@ -8,6 +8,7 @@
     <PackageId>ZeroC.IceGrid</PackageId>
     <PackageTags>Ice</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
     <PackageIcon>logo-128x128.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
