--- a/csharp/src/iceboxnet/iceboxnet.csproj
+++ b/csharp/src/iceboxnet/iceboxnet.csproj
@@ -10,6 +10,7 @@
     <ToolCommandName>iceboxnet</ToolCommandName>
     <PackageTags>Ice</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
     <PackageIcon>logo-128x128.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
