Move logos to new assets directory

--- a/csharp/src/IceBox/IceBox.csproj
+++ b/csharp/src/IceBox/IceBox.csproj
@@ -29,7 +29,7 @@
     <!-- Packaging files -->
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
-    <Content Include="../../../config/logo-128x128.png" Pack="true" PackagePath="/" />
+    <Content Include="../../../assets/logo-128x128.png" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
     <Content Include="@(SliceCompile)" Pack="true" PackagePath="/slice/IceBox"/>
     <Content Include="ZeroC.IceBox.props" Pack="true" PackagePath="buildTransitive/" />
