--- a/csharp/src/IceGrid/IceGrid.csproj
+++ b/csharp/src/IceGrid/IceGrid.csproj
@@ -31,7 +31,7 @@
     <!-- Packaging files -->
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
-    <Content Include="../../../config/logo-128x128.png" Pack="true" PackagePath="/" />
+    <Content Include="../../../assets/logo-128x128.png" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
     <Content Include="@(SliceCompile)" Pack="true" PackagePath="/slice/IceGrid"/>
     <Content Include="ZeroC.IceGrid.props" Pack="true" PackagePath="buildTransitive/" />
