--- a/csharp/src/IceLocatorDiscovery/IceLocatorDiscovery.csproj
+++ b/csharp/src/IceLocatorDiscovery/IceLocatorDiscovery.csproj
@@ -30,7 +30,7 @@
     <!-- Packaging files -->
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
-    <Content Include="../../../config/logo-128x128.png" Pack="true" PackagePath="/" />
+    <Content Include="../../../assets/logo-128x128.png" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 </Project>
