--- a/.github/workflows/build-cpp-windows-packages.yml
+++ b/.github/workflows/build-cpp-windows-packages.yml
@@ -82,13 +82,18 @@ jobs:
           ./gradlew.bat dist -PcppPlatform=x64 -PcppConfiguration=Release
         working-directory: ice/java
 
+      # MSI packaging depends on VCInstallDir to locate The C++ merge modules
+      - name: Add VCInstallDir to Environment
+        run: |
+          $vsPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -property installationPath
+          echo "VCInstallDir=$vsPath\VC" | Out-File -FilePath $env:GITHUB_ENV -Append
+        shell: powershell
+
       - name: Build MSI
         run: dotnet build -c Release -p:Platform=x64
         working-directory: ice/packaging/msi
         env:
           StagingDir: "${{ github.workspace }}\\staging"
-          # TODO compute this variable see issue #3558
-          VCInstallDir: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC"
 
       - name: Sign MSI installer with Trusted Signing
         uses: azure/trusted-signing-action@v0
